k8s/staging/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openmanage-staging
  labels:
    app: openmanage-ai
    env: staging
